canadensis_codegen_rust/tests/compile_fail/enum_not_struct/canadensis/NotStruct.1.0.dsdl
# This is a union, but only structs can produce generated enums
#[canadensis(enum)]
@union

uint8 a
uint16 b

@sealed
